deploy.yaml
# limitations under the License.

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gke-test
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: gke-test
    spec:
      containers:
      - name: gke-test
        image: gcr.io/keycloak-251014/html-server-image:$GITHUB_SHA
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
