service.yaml
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: gke-test-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: gke-test
